// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en ProductImage debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined "
>
  <img
    alt="Product Image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Pruebas en ProductImage debe de mostrar el componente correctamente con el url de la imagen  1`] = `
<img
  alt="Product Image"
  className="productImg undefined"
  src="./coffee-mug.png"
/>
`;
